--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "ldap-authorisation",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Node LDAP utitilies",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R nyan tests"
+    "test": "node node_modules/.bin/mocha -R nyan tests"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "rambda": "^0.5.2",
-    "request": "^2.79.0"
+    "ramda": "0.23.0",
+    "ldapjs": "1.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "express": "^4.14.1",
     "mocha": "^3.2.0",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "superagent": "1.3.0"
   }
 }
